--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Sep 23 20:16:07 IST 2021
-sdk.dir=C\:\\Users\\Aniruddha\\AppData\\Local\\Android\\Sdk
+#Mon Sep 27 10:03:49 IST 2021
+sdk.dir=/home/chirag/Android/Sdk
